@@ -5,6 +5,8 @@
 #TEST: Note that the TTL of the DNSKEY record is different in this test compared
 #TEST: to 1.4 due to a bug (fixed in trunk in r5491).
 
+#OPENDNSSEC-396 - Use TTL from kasp when generating DNSKEY and DS records.
+
 ENFORCER_WAIT=90	# Seconds we wait for enforcer to run
 ENFORCER_COUNT=2	# How many log lines we expect to see
 
@@ -56,8 +58,15 @@ echo "Testing dssub command ran" &&
 test -f "$INSTALL_ROOT/var/opendnssec/tmp/dssub.out" &&
 
 echo "Testing contents of dssub.out" &&
-grep "ods. 3600 IN DNSKEY 257 3 7 AwEAA.*" "$INSTALL_ROOT/var/opendnssec/tmp/dssub.out" &&
+grep "ods. 600 IN DNSKEY 257 3 7 AwEAA.*" "$INSTALL_ROOT/var/opendnssec/tmp/dssub.out" &&
 ! grep "; {cka_id = .*}" "$INSTALL_ROOT/var/opendnssec/tmp/dssub.out" &&
+
+# Also export the key to double check the TTL used 
+log_this ods-ksmutil-key-export 'ods-ksmutil key export' &&
+log_grep ods-ksmutil-key-export stdout 'ods.	600	IN	DNSKEY	257 3 7 AwEAA' &&
+
+log_this ods-ksmutil-key-export-ds 'ods-ksmutil key export --ds' &&
+log_grep ods-ksmutil-key-export-ds stdout 'ods.	300	IN	DS	' &&
 
 # Clean up
 echo "Cleaning up files" &&
