@@ -4,6 +4,8 @@ OpenDNSSEC 1.3.14rc1
 
 * OPENDNSSEC-367: ods-ksmutil: Require user confirmation if the alogrithm for
   a key is changed in a policy (as this rollover is not handled cleanly)
+* OPENDNSSEC-396: Use TTLs from kasp when generating DNSKEY and DS records for
+  output.
 
 
 OpenDNSSEC 1.3.13 - 2013-02-20
